# video-automation

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-macos.txt  requirements.txt  testurl.txt
.github/: pull_request_template.md
.github/workflows/: doc-sync.yml
config/: config.example.yaml  douyin_web_config.example.yaml  platforms.yaml  subtitle_styles.yaml  tts_voices.yaml
config/translation_profiles/: custom.yaml.example  dramatic-vi.yaml  funny-casual-vi.yaml  neutral-vi.yaml
docs/superpowers/plans/: 2026-05-19-rapidocr-frame-diff-speedup-plan.md  2026-05-20-tts-dubbing-redesign.md  2026-05-21-pipeline-page-cleanup-and-dubsync-default.md  2026-05-21-tts-providers-cleanup.md  2026-05-22-dub-sync-and-editor-default.md  2026-05-22-pipeline-progress-tracker-and-global-store.md  2026-05-22-ui-app-overhaul.md  2026-05-26-subtitle-style-canonical-spec.md  2026-05-28-cancel-pipeline-with-cleanup.md  2026-05-29-dub-shortening-toggle.md  2026-05-29-subtitle-editor-bug-fixes.md  2026-05-29-subtitle-versioning.md  2026-05-30-app-refocus-drop-export.md  2026-05-30-srt-import.md  2026-05-30-standalone-dub-studio.md  2026-05-31-auto-save-shortened-srt.md  2026-05-31-favorite-voices.md  2026-05-31-translation-profile-export-import.md  2026-06-03-gemini-tts-provider.md  2026-06-03-subtitle-cleanup.md  2026-06-20-vbee-tts-provider.md
docs/superpowers/specs/: 2026-05-19-rapidocr-frame-diff-speedup-design.md  2026-05-20-tts-dubbing-redesign.md  2026-05-21-pipeline-page-cleanup-and-dubsync-default.md  2026-05-22-ui-app-overhaul-design.md  (+18 more)
docs/vbee/: batchapi.md  callbackapi.md  getrequest.md
plans/: phase1-api-ui-integration.md  phase1-core-download-transcribe.md  phase1-translation-implementation.md  phase2-implementation.md  phase2-subtitle-burnin-reformat.md  phase3-ocr-subtitle-extraction.md  phase3-platform-uploads.md  phase4-orchestration-batch.md  phase4-tts-dubbing.md  phase5-orchestration-batch.md  phase5-tts-dubbing.md  phase6-ocr-subtitle-extraction.md  phase6-platform-uploads.md  phase6-subtitle-replacement.md  phase7-platform-uploads.md  subtitle-editor.md  ui-design-prompt.md
scripts/: refresh_douyin_cookie.py
src/: __main__.py  cli.py  pipeline.py
src/api/: __init__.py  deps.py  main.py  models.py  standalone_dub.py  task_manager.py  versions.py
src/downloader/: CLAUDE.md  __init__.py  douyin.py  ytdlp.py
src/processor/: CLAUDE.md  __init__.py  ffmpeg.py  region_detector.py  style.py  style_matcher.py  style_render.py  subtitle.py
src/transcriber/: CLAUDE.md  __init__.py  base.py  faster.py  mlx.py  ocr.py
src/translator/: __init__.py  llm.py  profiles.py
src/tts/: CLAUDE.md  __init__.py  assembler.py  base.py  dub_meta.py  dubsync_srt.py  edge.py  elevenlabs.py  gemini_tts.py  google_tts.py  gtts_provider.py  openai_tts.py  piper_tts.py  planner.py  runner.py  segment_cache.py  shortened_srt.py  sync_runner.py  vbee_tts.py
src/uploader/: CLAUDE.md
src/utils/: CLAUDE.md  config.py  filename.py  logger.py  metadata.py  retry.py  state.py
tests/: test_api_tts_gemini.py  test_api_tts_vbee.py  test_cancel_endpoint.py  test_downloader.py  test_dub_status_helper.py  test_dub_sync_endpoint.py  test_export_style.py  test_filename.py  test_gemini_tts.py  test_integration.py  test_migration.py  test_ocr_dedup.py  test_ocr_frame_diff.py  test_ocr_parse_result.py  test_ocr_provider.py  test_pipeline.py  test_pipeline_cancel_integration.py  test_pipeline_endpoints.py  test_preview_mix_endpoint.py  test_processor.py  test_settings_cookie.py  test_shortened_srt.py  test_srt_endpoints.py  test_srt_versioned.py  test_standalone_dub.py  test_style_matcher.py  test_style_render.py  test_style_spec.py  test_subtitle_plaintext.py  test_subtitle_replacement.py  test_task_cancel.py  test_transcriber.py  test_translator_factory.py  test_translator_skip.py  test_tts.py  test_tts_dub_sync_detection.py  test_tts_factory_gemini.py  test_tts_factory_vbee.py  test_tts_planner.py  test_tts_segment_cache.py  (+3 more)
ui-app/: index.html  package-lock.json  package.json
ui-app/src/: App.tsx  index.css  test-setup.ts
ui/screens/: dashboard.html  download-transcribe.html  settings.html  subtitle-process.html  upload.html
(+90 files in other folders)
