[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-repurpose"
version = "0.1.0"
description = "Automated pipeline to download Douyin videos, generate AI subtitles, dub, and produce per-platform reformatted exports"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "yt-dlp>=2024.1.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "edge-tts>=6.1.0",
    "gTTS>=2.5.0",
]

[project.optional-dependencies]
linux = ["llama-cpp-python>=0.3.0"]
macos = ["mlx-lm>=0.19.0"]
piper = ["piper-tts>=1.2.0"]

[project.scripts]
douyin-repurpose = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]
