[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-repurpose"
version = "0.1.0"
description = "Automated pipeline to download Douyin videos, generate AI subtitles, dub, and produce per-platform reformatted exports"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "yt-dlp>=2024.1.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # OCR via RapidOCR (ONNX Runtime) — replaces PaddleOCR/PaddlePaddle. Same
    # PP-OCRv4 weights underneath, no Paddle 3.x PIR/OneDNN crash, ~600 MB
    # lighter image. CPU provider is bundled; see [gpu] extra for CUDA.
    "rapidocr-onnxruntime>=1.4.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Linux / macOS extras are intentionally empty — install the base package on either OS.
# Local-LLM backends are opt-in (see `local-llm-linux` / `local-llm-macos` below).
linux = []
macos = []
local-llm-linux = ["llama-cpp-python>=0.3.0"]
local-llm-macos = ["mlx-lm>=0.19.0"]
# NVIDIA GPU acceleration for OCR. Install with `pip install -e ".[gpu]"`
# on Linux/Windows hosts with a CUDA-capable GPU; then run docker with
# `--gpus all`. On Apple Silicon the CPU provider is the only path.
gpu = ["onnxruntime-gpu>=1.18.0"]

[project.scripts]
douyin-repurpose = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]
